kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site-blue
  namespace: personal-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-site
      version: blue
  template:
    metadata:
      labels:
        app: personal-site
        version: blue
    spec:
      containers:
      - name: personal-site
        image: ghcr.io/zaneriley/personal-site:v0.3.2-alpha.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "2Gi"
        securityContext:
          runAsNonRoot: true
          runAsUser: 10002
          runAsGroup: 10002
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - personal-site
                - key: version
                  operator: In
                  values:
                  - blue
              topologyKey: kubernetes.io/hostname
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site-green
  namespace: personal-site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personal-site
      version: green
  template:
    metadata:
      labels:
        app: personal-site
        version: green
    spec:
      containers:
      - name: personal-site
        image: ghcr.io/zaneriley/personal-site:v0.3.2-alpha.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "2Gi"
        securityContext:
          runAsNonRoot: true
          runAsUser: 10002
          runAsGroup: 10002
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - personal-site
                - key: version
                  operator: In
                  values:
                  - green
              topologyKey: kubernetes.io/hostname
