kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site-blue
  namespace: personal-site
spec:
  selector:
    app: personal-site
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort:
        valueFrom:
          configMapKeyRef:
            name: personal-site-config
            key: APP_CONTAINER_PORT
---
apiVersion: v1
kind: Service
metadata:
  name: personal-site-green
  namespace: personal-site
spec:
  selector:
    app: personal-site
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort:
        valueFrom:
          configMapKeyRef:
            name: personal-site-config
            key: APP_CONTAINER_PORT
