kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  namespace: personal-site
  annotations:
    kube-score/ignore: ingress-targets-service # This is working successfully, but kube-score is not detecting it
spec:
  ingressClassName: nginx
  rules:
  - host: personal-site.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-site-green
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site-canary
  namespace: personal-site
  annotations:
    kube-score/ignore: ingress-targets-service # This is working successfully, but kube-score is not detecting it
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "0"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: personal-site.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: personal-site-blue
            port: 
              number: 80
